--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.mvc.view.prefix=/WEB-INF/view/ 
 spring.mvc.view.suffix=.jsp
 server.port=8095
+
+spring.datasource.hikari.pool-name=HikariCP
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/moamoa
+spring.datasource.username=moa_pet
+spring.datasource.password=moa_pet
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
