--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.1</version>
         </dependency>
+        
+        <dependency>
+    		<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
