--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,17 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
-		<dependency>
+	<!--  	<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-tomcat</artifactId>
+    <scope>provided</scope>
+</dependency>
+    
 		<dependency>
 		    <groupId>org.apache.tiles</groupId>
 		    <artifactId>tiles-jsp</artifactId>
@@ -112,7 +118,7 @@
 			    <configuration>
 			        <webResources>
 			            <resource>
-			                <directory>web</directory>
+			                <directory>src/main/webapp</directory>
 			            </resource>
 			        </webResources>
 			    </configuration>
