--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/moamoa
-spring.datasource.username=moa
-spring.datasource.password=1234
+spring.datasource.username=moa_pet
+spring.datasource.password=moa_pet
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
